user/themes/longread/scss/custom.scss
/* ... */
.button-ghost {
  background: none;
  border: white solid 1px;
  border-radius: 3px;
  color: white;
}
.button-ghost.button-ghost-black {
  border-color: black;
  color: black;
}
.button-ghost.button-ghost-black:hover, 
  .button-ghost.button-ghost-black:focus {
    background-color: black;
    color: white;
    * {
      color: white;
    }
}

.button-return {
  background-color: white;
  color: black;
  font-size: 25px;
  padding: 10px 25px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7);
  &:hover {
    background-color: #EEE;
    color: #111;
  }
}


#chapter-preview {
  margin-left: 0px;
  margin-right: 25px;

  .chapter-thumb {
    color: white;
    margin-top: 25px;
    a:hover {
      h5 {
        color: $red;
        border-top-color:$red;
      }
    }
    h5 {
      display: inline-block; // needed for pointer-events: none
      width: 100%;
      border-top: white solid 2px;
      padding-top: 15px;
      margin-bottom: 5px;
      min-height: 60px;
    }
    p {
      margin-top: 0px;
    }
  }
  .chapter-thumb.disabled {
    * {
      color: $dark-grey; 
    }
    h5 {
      border-color: $dark-grey;
    }
  }
}
.content {
  max-width: 700px;
  @include respond-to(600) {
    padding: 0 0;
  }
}

.post.chapter, .post.subobject, .post.page {
  .article-image {
    bottom: 10vh;
    .post-meta {
      bottom: 200px;
    }
    .post-image-image.chapter-1 {
      background-position-x: 67%;
    }
    .post-image-image.chapter-2 {
      background-position-y: 15%;
      background-position-x: 48%;
    }
    .article-image-gradient {
      height: 100%;
      background: 
        linear-gradient(
          rgba(0, 0, 0, 0),
          rgba(0, 0, 0, 0.8)
        );
    }
  }

  .drop-cap { 
    float: left;
    color: black;
    font-size: 125px;
    line-height: 70px;
    padding-top: 43px;
    padding-right: 15px;
    padding-left: 3px;
    font-family: Moyenage14;
  }

  .post-content, {
    position: relative;
    width: inherit;
    padding-top: 15px;
    padding-left: 40px;
    padding-right: 40px;
    font-family: "Uni Grotesk Regular";
    background-color: white;
    color: $text-color;
    z-index: 3;

    @include respond-to(600) {
      padding-left: 20px;
      padding-right: 20px;
    }

    .chapter-title {
      position: absolute;
      top: -280px;
      margin-left: 0px;
      margin-right: 20px;
      color: white;
      text-shadow: 0px 1px 16px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(0, 0, 0, 0.5);
      @include respond-to(620) {
        top: -230px;
      }
      .chapter-number {
        font-size: 16px;
      }
      h1 {
        color: white;
        font-size: 80px;
        margin-bottom: -30px;
        @include respond-to(810) {
          font-size: 65px;
          margin-bottom: -25px;
        }
        @include respond-to(620) {
          font-size: 45px;
          margin-bottom: -20px;
        }
        @include respond-to(460) {
          font-size: 40px;
          margin-bottom: -15px;
        }
      }
      .post-reading {
        position: relative;
        right: 0px;
        font-size: 16px;
        text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25), 0px 0px 6px rgba(0, 0, 0, 0.8);
      }
    }
    h1 {
      font-size: 45px
    }
    h1, h2 {
      letter-spacing: normal;
    }
    h2 {
      margin-bottom: 4px;
      padding-top: 0;
    }
    h3, h4, h5, h6 {
      margin-bottom: 20px;
    }
    h1, h2, h3, h4, h5, h6 {
      color: $text-color;
      font-family: $font-bold;
    }
    .title-date {
      font-family: "Uni Grotesk Regular";
      font-size: 18px;
      font-weight: 100;
    }
    p {
      color: $text-color;
      font-size: 18px;
      @include hyphens(none);
      @include respond-to(600) {
        line-height: 25px;
      }
    }
    h1, h2, h3, h4, h5, h6, figure, .post-content > iframe, .post-content > div:not(.not-extended), div.highlight, div.chapter-number, div.post-reading {
      margin-left: -20px;
      margin-right: -20px;
      @include respond-to(600) {
        margin-left: 0;
        margin-right: 0;
      }
    }
    .fluid-width-video-wrapper {
      margin-left: 0 !important;
    }
    div.highlight p {
      font-family: $font-bold;
      font-size: 25px;
      line-height: 32px;
    }
    figcaption {
      margin-top: 10px;
      font-style: normal;
      font-size: 14px;
    }
    li {
      font-size: 18px;
    }

    hr {
      display:block;
      border:0px;
      height:20px;
      width:20px;
      margin-top: 10px;
      background-image:url(../images/hr.svg);
    }
    div.audioplayer {
      margin-bottom: -30px; // compensate for padding bottom of encapsulating p tag
    }
  }
}

.post.subobject {
  color: $text-color;
  .breadcrumbs {
    padding: 0 20px;
    margin-top: -25px;
    margin-bottom: 25px;
    @include respond-to(805) {
      margin-top: 0;
    }
    a {
      text-decoration: underline;
    }
  }
  .chapter-title {
    margin-top: 50px;
    margin-bottom: 50px;
    padding: 0 20px;
    h1 {
      color: $text-color;
      font-size: 60px;
      line-height: 60px;
      @include respond-to(620) {
        font-size: 40px;
        line-height: 40px;
      }
      @include respond-to(460) {
        font-size: 35px;
        line-height: 35px;
      }
    }
    .title-date {
      font-family: "Uni Grotesk Regular";
      font-size: 18px;
      font-weight: 100;
    }
  }
  .post-reading {
    top: -48px;
  }
}

$return-height: 250px;
$button-height: 60px;
.return{
  height: $return-height;
  .return-gradient {
    height: 100%;
    background: 
      linear-gradient(
        rgba(249, 249, 247, 1),
        rgba(249, 249, 247, 0.5)
      );
  }
  .button-return {
    margin-top: ($return-height - $button-height)/2;
  }
}
.return.chapter-1 {
  background: 
    url(../../../pages/chapters/1/tiso.jpg);
  background-size: cover;
  background-position-y: 52%;
}
/* ... */

